--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <!-- Profile Section -->
         <div class="profile">
-            <img src="epic.jpg" alt="Boga Umashankar" class="profile-img">
+            <img src="epica.jpg" alt="Boga Umashankar" class="profile-img">
             <div class="greeting">Hi There!</div>
             <div class="name">Boga Umashankar</div>
             <div class="title">Aspiring Software Developer</div>
